opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/toplevel_expect_test"
bug-reports: "https://github.com/janestreet/toplevel_expect_test/issues"
dev-repo: "https://github.com/janestreet/toplevel_expect_test.git"
license: "Apache-2.0"
build: [
["jbuilder" "build-package" "toplevel_expect_test" "-j" jobs]
]
depends: [
  "core_kernel"
  "findlib_top"
  "jbuilder"
  "ocaml-compiler-libs"
  "ppx_core"
  "ppx_driver"
  "ppx_expect"
  "ppx_here"
  "ppx_jane"
  "base-threads"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Expectation tests for the OCaml toplevel

Allows one to write both toplevel phrases and the expected output from
the toplevel in the same file. This provides an easy way to test
compilations errors as well as provide a nice alternative to using
the toplevel in a terminal.
"
