(library (name toplevel_expect_test) (public_name toplevel_expect_test)
 (modes byte)
 (libraries toplevel_expect_test_types ppxlib ppxlib.print_diff
  core_kernel.core ppx_expect.common ppx_expect.matcher mlt_parser
  ocaml-compiler-libs.common compiler-libs.common compiler-libs.toplevel
  findlib.top unix threads toplevel_backend ppx_inline_test.runner.lib
  core.sys_unix)
 (preprocess (pps ppx_jane)))