(library
 (name toplevel_expect_test)
 (public_name toplevel_expect_test)
 (modes byte)
 (libraries compiler-libs.toplevel findlib.top core_kernel.caml_unix core
   mlt_parser ocaml-compiler-libs.common compiler-libs.common
   ppx_expect.runtime ppx_inline_test.runner.lib ppxlib ppxlib.print_diff
   ppxlib.ast core_unix.sys_unix threads toplevel_backend
   toplevel_expect_test_types unix)
 (preprocess
  (pps ppx_jane ppx_optcomp)))
